neater setup script